# DroneSpin

./: .gitignore  README.md  pyproject.toml
dronespin/: __init__.py
dronespin/domain/: __init__.py  formation.py  trajectory.py
dronespin/guidance/: __init__.py  assignment.py  attention.py  control.py
dronespin/math_s3/: __init__.py  quaternion.py
dronespin/sim/: __init__.py  drone_state.py  runner.py
dronespin/store/: __init__.py  db.py  formation_store.py  trajectory_store.py
dronespin/viz/: __init__.py  plot3d.py
tests/: test_attention.py  test_convergence.py  test_formation.py  test_quaternion.py  test_trajectory.py
